[package]
name = "rust-script"
version = "0.18.0"
edition = "2018"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
description = "Command-line tool to run Rust \"scripts\" which can make use of crates."
homepage = "https://rust-script.org"
documentation = "https://rust-script.org"
repository = "https://github.com/fornwall/rust-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "_config.yml",
    "CNAME",
    ".github",
    "target"
]

[dependencies]
clap = "3.0.0-rc.7"
dirs-next = "2"
env_logger = "0.9"
lazy_static = "1"
log = "0.4"
pulldown-cmark = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha-1 = "0.9"
toml = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"

[target.'cfg(unix)'.dependencies]
atty = "0.2"

[dev-dependencies]
scan-rules = "0.2"
tempfile = "3"

[profile.release]
lto = true
