[package]
name = "rust-script"
version = "0.24.0"
edition = "2021"
rust-version = "1.64"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
description = "Command-line tool to run Rust \"scripts\" which can make use of crates."
homepage = "https://rust-script.org"
documentation = "https://rust-script.org"
repository = "https://github.com/fornwall/rust-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "_config.yml",
    "CNAME",
    ".github",
    "target"
]

[dependencies]
clap = "4"
dirs-next = "2"
env_logger = "0.10"
log = "0.4"
pulldown-cmark = "0.9"
regex = "1"
sha1 = "0.10"
tempfile = "3"
toml = "0.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.11"

[target.'cfg(unix)'.dependencies]
is-terminal = "0.4.6"

[dev-dependencies]
lazy_static = "1"
scan-rules = "0.2"

[profile.release]
lto = true
