[package]
name = "rust-script"
version = "0.35.0"
edition = "2021"
rust-version = "1.74"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
description = "Command-line tool to run Rust \"scripts\" which can make use of crates."
homepage = "https://rust-script.org"
documentation = "https://rust-script.org"
repository = "https://github.com/fornwall/rust-script"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["cargo", "script"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "_config.yml",
    "CNAME",
    ".github",
    "target"
]

[dependencies]
clap = "4"
dirs = "5"
env_logger = "0.11"
log = "0.4"
pulldown-cmark = "0.12"
regex = "1"
sha1 = "0.10"
shell-words = "1"
tempfile = "3"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
lazy_static = "1"
scan-rules = "0.2"

[profile.release]
lto = true

[features]
default=[]
online_tests=[]
